# ipp_pairing

./: Cargo.toml  README.md
src/: inner_product.rs  lib.rs  transcript.rs
