[package]
name = "ipp_pairing"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
merlin = "1.2.1"

[dependencies.amcl_wrapper]
version = "0.2.0"
#path = "../amcl_wrapper"
default-features = false
features = ["bls381"]